--- a/index.html
+++ b/index.html
@@ -1,7 +1,37 @@
 <!DOCTYPE html>
 <html lang="ja">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="view"
-    </head>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="style.css">
+  <script src="port.js" defer></script>
+</head>
+<body>
+  <header class="global-nav">
+    <h1>Portfolio</h1>
+    <nav class="menu">
+      <ul>
+        <li><a href="#sec1"></a>LINEUP</li>
+        <li><a href="#sec2"></a>ABOUT</li>
+      </ul>
+    </nav>
+  </header>
+  <main>
+    <section id="sec1">
+        LINEUP
+    </section>
+    <div class="produc">
+        <img src=".jpg" alt="about image">
+      </div>
+    <section id="sec2">
+        ABOUT
+    </section>
+    <h2>私について</h2>
+    <p>
+      name:菅原愛望<br>
+      birthday:2001/6/6<br>
+      favorite:cat
+    </p>
+  </main>
+</body>
 </html>
