--- a/index.html
+++ b/index.html
@@ -11,26 +11,50 @@
     <h1>Portfolio</h1>
     <nav class="menu">
       <ul>
-        <li><a href="#sec1"></a>LINEUP</li>
-        <li><a href="#sec2"></a>ABOUT</li>
+        <li><a href="#sec1">TOP</a></li>
+        <li><a href="#sec2">LINEUP</a></li>
+        <li><a href="#sec3">PLOFILE</a></li>
       </ul>
     </nav>
   </header>
   <main>
     <section id="sec1">
+      
+    </section>
+    <section id="sec2">
         LINEUP
     </section>
+
+    <img id="photo" src="img3.jpg" alt="1枚目">
+    <p id="text"></p>
     <div class="produc">
-        <img src=".jpg" alt="about image">
-      </div>
-    <section id="sec2">
-        ABOUT
+      <img id="photo-1" src="img4.jpg" alt="1枚目の写真">
+      <img id="photo-2" src="img5.jpg" alt="2枚目の写真">
+      <img id="photo-3" src="img6.jpg" alt="3枚目の写真">
+      <img id="photo-4" src="img7.jpg" alt="4枚目の写真">
+    </div>
+
+    <section id="sec3">
+      PLOFILE
     </section>
-    <h2>私について</h2>
+    <h2>My plofile</h2>
+    <div class="aboutme">
+      <img src="img2.jpg" alt="about image">
+    </div>
     <p>
-      name:菅原愛望<br>
-      birthday:2001/6/6<br>
-      favorite:cat
+      ★name:菅原愛望<br>
+      ★birthday:2001/6/6<br>
+      ★from:三重<br>
+      ★hobby:音楽<br>
+      ★favorite:AAA<br>
+      <br>
+      人生初のペットとしてベンガル猫を二匹飼い始め、<br>
+      毎日成長記録と思い出としてたくさん写真を撮るように<br>
+      なりました(^^)<br>
+      可愛くてとても癒される写真だらけなので、ぜひ(^^)<br>
+      ちなみに、プロフィール画像はお友達とロリータを<br>
+      着てみた時の私です♪
+
     </p>
   </main>
 </body>
