--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       なりました(^^)<br>
       可愛くてとても癒される写真だらけなので、ぜひ(^^)<br>
       ちなみに、プロフィール画像はお友達とロリータを<br>
-      着てみた時の私です♪
+      着てみた時のものです♪
 
     </p>
   </main>
